Add calculator function & only works 1 operation at a time

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <!-- SCREEN -->
         <div id="screen">
             <div id="screenText">
-                    <p class="smallNumberDisplay">3682</p>
-                    <h2 class="bigNumberDisplay">98989</h2>
+                    <p class="smallNumberDisplay"></p>
+                    <h2 class="bigNumberDisplay">0</h2>
             </div>
         </div>
 
